--- a/architecture/Windows-x86_64/py_env_202309_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_202309_conda_env_export.yml
@@ -15,7 +15,7 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_0
   - pip:
       - absl-py==1.4.0
-      - accessible-pygments==0.0.4
+      - accessible-pygments==0.0.5
       - addict==2.4.0
       - aenum==3.1.15
       - affine==2.4.0
@@ -29,7 +29,7 @@ dependencies:
       - aiosignal==1.3.1
       - aiosqlite==0.20.0
       - alabaster==0.7.16
-      - albumentations==1.3.1
+      - albumentations==1.4.7
       - alpha-vantage==2.3.1
       - altair==5.3.0
       - altgraph==0.17.4
@@ -69,26 +69,26 @@ dependencies:
       - azure-common==1.1.28
       - azure-core==1.30.1
       - azure-eventhub==5.11.7
-      - babel==2.14.0
+      - babel==2.15.0
       - backcall==0.2.0
       - backoff==2.2.1
       - base58==2.1.1
-      - bcrypt==4.1.2
+      - bcrypt==4.1.3
       - beautifulsoup4==4.12.3
       - billiard==4.2.0
       - biopython==1.83
-      - black==24.4.1
+      - black==24.4.2
       - bleach==6.1.0
       - blessed==1.20.0
       - blessings==1.7
-      - blinker==1.7.0
+      - blinker==1.8.2
       - blis==0.7.11
       - blosc2==2.6.2
       - blurhash==1.1.4
       - bokeh==3.4.1
       - boltons==24.0.0
-      - boto3==1.34.92
-      - botocore==1.34.92
+      - boto3==1.34.105
+      - botocore==1.34.105
       - bottleneck==1.3.8
       - branca==0.7.2
       - brotli==1.1.0
@@ -122,7 +122,7 @@ dependencies:
       - clikit==0.6.2
       - cloudpathlib==0.16.0
       - cloudpickle==3.0.0
-      - cmake==3.29.2
+      - cmake==3.29.3
       - cmdstanpy==1.2.2
       - codemod==1.0.0
       - coinpaprika==0.1.0
@@ -137,7 +137,7 @@ dependencies:
       - confection==0.1.4
       - configargparse==1.7
       - configparser==7.0.0
-      - confluent-kafka==2.3.0
+      - confluent-kafka==2.4.0
       - conllu==4.5.3
       - cons==0.4.6
       - contextlib2==21.6.0
@@ -145,17 +145,17 @@ dependencies:
       - control==0.10.0
       - convertdate==2.4.0
       - coremltools==7.2
-      - cornac==2.1.0
-      - coverage==7.5.0
+      - cornac==2.2.0
+      - coverage==7.5.1
       - cramjam==2.8.3
       - crashtest==0.3.1
       - crcmod==1.7
       - croniter==2.0.5
-      - cryptography==42.0.5
+      - cryptography==42.0.7
       - cssselect2==0.7.0
       - curtsies==0.4.2
       - cvxopt==1.3.2
-      - cvxpy==1.4.3
+      - cvxpy==1.5.1
       - cwcwidth==0.1.9
       - cycler==0.12.1
       - cymem==2.0.8
@@ -165,17 +165,17 @@ dependencies:
       - dacite==1.8.1
       - dacktool==0.0.7
       - daft==0.1.2
-      - dash==2.16.1
+      - dash==2.17.0
       - dash-core-components==2.0.0
       - dash-html-components==2.0.0
       - dash-renderer==1.9.1
       - dash-table==5.0.0
       - dask==2024.4.2
-      - dask-expr==1.0.13
+      - dask-expr==1.0.14
       - dask-glm==0.3.2
       - dask-ml==2024.4.4
       - databricks-cli==0.18.0
-      - datasets==2.19.0
+      - datasets==2.19.1
       - datashape==0.5.2
       - datetime==5.5
       - datetime-distance==0.1.3
@@ -191,11 +191,11 @@ dependencies:
       - dill==0.3.8
       - distlib==0.3.8
       - distributed==2024.4.2
-      - django==5.0.4
+      - django==5.0.6
       - django-cors-headers==4.3.1
       - django-extensions==3.2.3
       - django-http-exceptions==1.4.0
-      - django-model-utils==4.5.0
+      - django-model-utils==4.5.1
       - django-request-logging==0.7.5
       - djangorestframework==3.15.1
       - dlib==19.24.2
@@ -203,9 +203,9 @@ dependencies:
       - docker==7.0.0
       - docutils==0.17.1
       - ecos==2.0.13
-      - einops==0.7.0
+      - einops==0.8.0
       - elastic-transport==8.13.0
-      - elasticsearch==8.13.0
+      - elasticsearch==8.13.1
       - emoji==2.11.1
       - entrypoints==0.4
       - ephem==4.1.5
@@ -214,18 +214,18 @@ dependencies:
       - etuples==0.3.9
       - eventkit==1.0.3
       - exceptiongroup==1.2.1
-      - exchange-calendars==4.5.3
+      - exchange-calendars==4.5.4
       - executing==2.0.1
       - faiss-cpu==1.8.0
       - fake-useragent==1.5.1
       - farama-notifications==0.0.4
       - fastcluster==1.2.6
-      - fastcore==1.5.29
+      - fastcore==1.5.35
       - fastdtw==0.3.4
       - fasteners==0.19
       - fastjsonschema==2.19.1
       - feather-format==0.4.1
-      - filelock==3.13.4
+      - filelock==3.14.0
       - fire==0.6.0
       - flake8==7.0.0
       - flask==3.0.3
@@ -235,7 +235,7 @@ dependencies:
       - fonttools==4.51.0
       - fqdn==1.5.1
       - freetype-py==2.4.0
-      - frozendict==2.4.2
+      - frozendict==2.4.4
       - frozenlist==1.4.1
       - fs==2.4.16
       - fsspec==2024.3.1
@@ -243,7 +243,7 @@ dependencies:
       - funcy==2.0
       - future==1.0.0
       - gast==0.5.4
-      - gdown==5.1.0
+      - gdown==5.2.0
       - gensim==4.3.2
       - geographiclib==2.0
       - geopy==2.4.1
@@ -261,7 +261,7 @@ dependencies:
       - google-auth==2.29.0
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.0
-      - google-cloud-bigquery-storage==2.14.0
+      - google-cloud-bigquery-storage==2.14.1
       - google-cloud-core==2.4.1
       - google-crc32c==1.5.0
       - google-pasta==0.2.0
@@ -273,7 +273,7 @@ dependencies:
       - gputil==1.4.0
       - greenlet==3.0.3
       - grpc-google-iam-v1==0.13.0
-      - grpcio==1.62.2
+      - grpcio==1.63.0
       - grpcio-status==1.48.1
       - grpclib==0.4.7
       - gspread==6.1.0
@@ -283,14 +283,14 @@ dependencies:
       - gymnasium==0.29.1
       - h11==0.14.0
       - h2==4.1.0
-      - h2o==3.46.0.1
+      - h2o==3.46.0.2
       - h5netcdf==1.3.0
       - h5py==3.11.0
       - haversine==2.8.1
       - heapdict==1.0.1
       - hijri-converter==2.3.1
       - hiredis==2.3.2
-      - holidays==0.47
+      - holidays==0.48
       - hpack==4.0.0
       - hsluv==5.0.4
       - html5lib==1.1
@@ -300,13 +300,13 @@ dependencies:
       - httplib2==0.22.0
       - httplib2shim==0.0.3
       - httpx==0.27.0
-      - huggingface-hub==0.22.2
+      - huggingface-hub==0.23.0
       - humanfriendly==10.0
       - humanize==4.9.0
       - hupper==1.12.1
       - hyperframe==6.0.1
       - hyperopt==0.2.7
-      - hypothesis==6.100.1
+      - hypothesis==6.102.1
       - ib-insync==0.9.86
       - icu==0.0.1
       - idna==3.7
@@ -328,7 +328,7 @@ dependencies:
       - intervaltree==3.1.0
       - intrinio-sdk==6.27.2
       - ipykernel==6.29.4
-      - ipython==8.23.0
+      - ipython==8.24.0
       - ipython-genutils==0.2.0
       - ipywidgets==8.1.2
       - iso8601==2.1.0
@@ -336,21 +336,21 @@ dependencies:
       - isoduration==20.11.0
       - itsdangerous==2.2.0
       - jaraco-classes==3.4.0
-      - jax==0.4.26
+      - jax==0.4.28
       - jax-jumpy==1.0.0
       - jdcal==1.4.1
       - jedi==0.19.1
       - jeepney==0.8.0
       - jieba==0.42.1
-      - jinja2==3.1.3
+      - jinja2==3.1.4
       - jinxed==1.2.1
       - jmespath==1.0.1
-      - joblib==1.4.0
+      - joblib==1.4.2
       - json-rpc==1.15.0
       - json5==0.9.25
       - jsonpickle==3.0.4
       - jsonpointer==2.4
-      - jsonschema==4.21.1
+      - jsonschema==4.22.0
       - jsonschema-specifications==2023.12.1
       - jstyleson==0.0.2
       - jupyter==1.0.0
@@ -362,12 +362,12 @@ dependencies:
       - jupyter-server==2.14.0
       - jupyter-server-terminals==0.5.3
       - jupyter-ydoc==2.0.1
-      - jupyterlab==4.1.6
+      - jupyterlab==4.1.8
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.1
       - jupyterlab-widgets==3.0.10
       - kaggle==1.6.12
-      - keras==3.3.2
+      - keras==3.3.3
       - keras-preprocessing==1.1.2
       - kivy-garden==0.1.5
       - kiwisolver==1.4.5
@@ -389,23 +389,23 @@ dependencies:
       - logical-unification==0.4.6
       - luigi==3.5.0
       - lunarcalendar==0.0.9
-      - lxml==5.2.1
+      - lxml==5.2.2
       - lz4==4.3.3
-      - m3u8==4.1.0
+      - m3u8==5.0.0
       - macholib==1.16.3
-      - mako==1.3.3
-      - marisa-trie==1.1.0
+      - mako==1.3.5
+      - marisa-trie==1.1.1
       - markdown==3.6
       - markdown-it-py==3.0.0
       - markdown2==2.4.13
       - markupsafe==2.1.5
-      - marshmallow==3.21.1
-      - mashumaro==3.12
+      - marshmallow==3.21.2
+      - mashumaro==3.13
       - mastodon-py==1.8.1
       - matplotlib==3.8.4
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
-      - mdit-py-plugins==0.4.0
+      - mdit-py-plugins==0.4.1
       - mdurl==0.1.2
       - memory-profiler==0.61.0
       - miniful==0.0.6
@@ -413,7 +413,7 @@ dependencies:
       - missingno==0.5.2
       - mistune==3.0.2
       - mixpanel==4.10.1
-      - mizani==0.10.0
+      - mizani==0.11.3
       - mkl==2021.4.0
       - ml-dtypes==0.3.2
       - mlagents-envs==0.28.0
@@ -439,7 +439,7 @@ dependencies:
       - natsort==8.4.0
       - nbclassic==1.0.0
       - nbclient==0.10.0
-      - nbconvert==7.16.3
+      - nbconvert==7.16.4
       - nbformat==5.10.4
       - ndindex==1.8
       - nest-asyncio==1.6.0
@@ -453,7 +453,7 @@ dependencies:
       - numba==0.59.1
       - numcodecs==0.12.1
       - numexpr==2.10.0
-      - numpy==1.23.5
+      - numpy==1.26.4
       - nvidia-ml-py==12.550.52
       - nystrom-attention==0.0.12
       - oandapyv20==0.7.2
@@ -464,6 +464,7 @@ dependencies:
       - onnx==1.16.0
       - onnx-simplifier==0.4.36
       - onnxconverter-common==1.13.0
+      - onnxruntime==1.17.3
       - opencensus-context==0.1.3
       - opencv-python==4.9.0.80
       - opencv-python-headless==4.9.0.80
@@ -472,15 +473,15 @@ dependencies:
       - opt-einsum==3.3.0
       - optional-django==0.3.0
       - optree==0.11.0
-      - orjson==3.10.1
+      - orjson==3.10.3
       - osqp==0.6.5
       - outcome==1.3.0
       - overrides==7.7.0
       - packaging==24.0
       - palettable==3.3.3
-      - pandas==2.0.3
+      - pandas==2.2.2
       - pandas-market-calendars==4.4.0
-      - pandas-stubs==2.0.0.230412
+      - pandas-stubs==2.2.2.240514
       - pandoc==2.3
       - pandocfilters==1.5.1
       - param==2.1.0
@@ -489,14 +490,14 @@ dependencies:
       - parasail==1.3.4
       - parsedatetime==2.6
       - parso==0.8.4
-      - partd==1.4.1
+      - partd==1.4.2
       - pastedeploy==3.1.0
       - pastel==0.2.1
       - pathlib-abc==0.1.1
       - pathspec==0.12.1
       - pathy==0.11.0
       - patsy==0.5.6
-      - peewee==3.17.3
+      - peewee==3.17.5
       - pep517==0.13.1
       - performer-pytorch==1.1.4
       - persistent==5.2
@@ -511,10 +512,10 @@ dependencies:
       - plaster==1.1.2
       - plaster-pastedeploy==1.0.1
       - platformdirs==4.2.1
-      - plotly==5.21.0
-      - plotnine==0.12.1
+      - plotly==5.22.0
+      - plotnine==0.13.6
       - pluggy==1.5.0
-      - plumbum==1.8.2
+      - plumbum==1.8.3
       - ply==3.11
       - pmdarima==2.0.4
       - pooch==1.8.1
@@ -522,6 +523,7 @@ dependencies:
       - portpicker==1.6.0
       - powerlaw==1.5
       - preshed==3.0.9
+      - pretty-errors==1.2.25
       - prettytable==3.10.0
       - proglog==0.1.10
       - progressbar2==4.4.2
@@ -547,7 +549,7 @@ dependencies:
       - py4j==0.10.9.7
       - pyaml==24.4.0
       - pyanalyze==0.12.0
-      - pyarrow==16.0.0
+      - pyarrow==16.1.0
       - pyarrow-hotfix==0.6
       - pyasn1==0.6.0
       - pyasn1-modules==0.4.0
@@ -559,11 +561,11 @@ dependencies:
       - pycocotools==2.0.7
       - pycodestyle==2.11.1
       - pycparser==2.22
-      - pycrdt==0.8.19
+      - pycrdt==0.8.25
       - pycryptodome==3.20.0
       - pycryptodomex==3.20.0
       - pyct==0.5.0
-      - pydantic==1.10.14
+      - pydantic==2.7.1
       - pydantic-core==2.18.2
       - pydata-google-auth==1.8.2
       - pydata-sphinx-theme==0.13.3
@@ -574,10 +576,10 @@ dependencies:
       - pyfume==0.3.1
       - pygame==2.5.2
       - pygithub==2.3.0
-      - pygments==2.17.2
-      - pyinstaller-hooks-contrib==2024.5
+      - pygments==2.18.0
+      - pyinstaller-hooks-contrib==2024.6
       - pyjwt==2.8.0
-      - pyldavis==3.4.0
+      - pyldavis==3.4.1
       - pylev==1.4.0
       - pyluach==2.2.0
       - pymeeus==0.5.12
@@ -592,7 +594,7 @@ dependencies:
       - pyotp==2.9.0
       - pyparsing==3.1.2
       - pypng==0.20220715.0
-      - pyproject-hooks==1.0.0
+      - pyproject-hooks==1.1.0
       - pyqt6-qt6==6.7.0
       - pyqt6-sip==13.6.0
       - pyramid==2.0.2
@@ -602,7 +604,7 @@ dependencies:
       - pysimdjson==6.0.2
       - pysimplegui==5.0.4
       - pysocks==1.7.1
-      - pytest==8.1.1
+      - pytest==8.2.0
       - python-barcode==0.15.1
       - python-daemon==3.0.1
       - python-dateutil==2.9.0
@@ -617,7 +619,7 @@ dependencies:
       - python-socks==2.4.4
       - python-utils==3.8.2
       - pytimeparse==1.1.8
-      - pytorch-lightning==2.2.3
+      - pytorch-lightning==2.2.4
       - pytorch-ranger==0.1.1
       - pytrends==4.9.2
       - pytz==2024.1
@@ -627,17 +629,17 @@ dependencies:
       - pywin32-ctypes==0.2.2
       - pywinpty==2.0.13
       - pyyaml==6.0.1
-      - pyzmq==26.0.2
+      - pyzmq==26.0.3
       - qcore==1.10.1
       - qdldl==0.1.7
       - qt6-applications==6.5.0.2.3
-      - qtconsole==5.5.1
+      - qtconsole==5.5.2
       - qtpy==2.4.1
       - qudida==0.0.4
       - rapidminer==10.1.0
       - rapids==0.0.1
-      - referencing==0.35.0
-      - regex==2024.4.16
+      - referencing==0.35.1
+      - regex==2024.5.10
       - requests==2.31.0
       - requests-cache==1.2.0
       - requests-file==2.0.0
@@ -648,7 +650,7 @@ dependencies:
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rich==13.7.1
-      - rpds-py==0.18.0
+      - rpds-py==0.18.1
       - rpy2==3.5.7
       - rsa==4.9
       - s3transfer==0.10.1
@@ -657,13 +659,13 @@ dependencies:
       - scikit-image==0.23.2
       - scikit-learn==1.4.2
       - scikit-plot==0.3.7
-      - scipy==1.11.2
-      - scs==3.2.4
-      - seaborn==0.12.2
+      - scipy==1.11.4
+      - scs==3.2.4.post1
+      - seaborn==0.13.2
       - selenium==4.20.0
       - send2trash==1.8.3
       - sentencepiece==0.2.0
-      - sentry-sdk==2.0.0
+      - sentry-sdk==2.1.1
       - setproctitle==1.3.3
       - setuptools==69.5.1
       - setuptools-git==1.2
@@ -699,11 +701,11 @@ dependencies:
       - sphinxcontrib-jsmath==1.0.1
       - sphinxcontrib-qthelp==1.0.7
       - sphinxcontrib-serializinghtml==1.1.10
-      - sqlalchemy==2.0.29
+      - sqlalchemy==2.0.30
       - sqlparse==0.5.0
       - srsly==2.4.8
       - sshtunnel==0.4.0
-      - stable-baselines3==2.3.1
+      - stable-baselines3==2.3.2
       - stack-data==0.6.3
       - stanio==0.5.0
       - stanza==1.8.2
@@ -723,7 +725,7 @@ dependencies:
       - tangled-up-in-unicode==0.2.0
       - tbb==2021.5.0
       - tblib==3.0.0
-      - tenacity==8.2.3
+      - tenacity==8.3.0
       - tensorboard==2.16.2
       - tensorboard-data-server==0.7.2
       - tensorboard-plugin-wit==1.8.1
@@ -750,32 +752,32 @@ dependencies:
       - tf-keras==2.16.0
       - tf-slim==1.1.0
       - thinc==8.2.3
-      - threadpoolctl==3.4.0
-      - thriftpy2==0.4.20
-      - tifffile==2024.4.24
+      - threadpoolctl==3.5.0
+      - thriftpy2==0.5.0
+      - tifffile==2024.5.10
       - tinycss2==1.3.0
       - tinydb==4.8.0
       - tokenizers==0.19.1
       - toml==0.10.2
       - tomli==2.0.1
-      - tomlkit==0.12.4
+      - tomlkit==0.12.5
       - toolz==0.12.1
       - torch==2.3.0
       - torch-optimizer==0.3.0
-      - torchmetrics==1.3.2
+      - torchmetrics==1.4.0
       - torchsummary==1.5.1
       - tornado==6.4
-      - tqdm==4.66.2
+      - tqdm==4.66.4
       - trading-calendars==2.1.1
       - traitlets==5.14.3
-      - transformers==4.40.1
+      - transformers==4.40.2
       - translationstring==1.4
       - trio==0.25.0
       - trio-websocket==0.11.1
       - tweepy==4.14.0
       - twint==2.1.20
       - typed-ast==1.5.5
-      - typeguard==2.13.3
+      - typeguard==2.13.0
       - typer==0.9.3
       - types-python-dateutil==2.9.0.20240316
       - types-pytz==2024.1.0.20240417
@@ -787,7 +789,7 @@ dependencies:
       - tzlocal==5.2
       - ua-parser==0.18.0
       - uc-micro-py==1.0.3
-      - ujson==5.9.0
+      - ujson==5.10.0
       - umap-learn==0.5.6
       - unidecode==1.3.8
       - uri-template==1.3.0
@@ -800,7 +802,7 @@ dependencies:
       - vega-datasets==0.9.0
       - venusian==3.1.0
       - vine==5.1.0
-      - visions==0.7.5
+      - visions==0.7.6
       - vispy==0.14.2
       - waitress==3.0.0
       - wasabi==1.1.2
@@ -811,7 +813,7 @@ dependencies:
       - webob==1.8.7
       - websocket-client==1.8.0
       - websockets==12.0
-      - werkzeug==3.0.2
+      - werkzeug==3.0.3
       - wheel==0.43.0
       - widgetsnbextension==4.0.10
       - wincertstore==0.2
@@ -819,7 +821,7 @@ dependencies:
       - wordcloud==1.9.3
       - wrapt==1.16.0
       - wsproto==1.2.0
-      - xarray==2024.3.0
+      - xarray==2024.5.0
       - xarray-einstats==0.7.0
       - xgboost==2.0.3
       - xlrd==2.0.1
@@ -831,9 +833,8 @@ dependencies:
       - yahoofinancials==1.20
       - yarl==1.9.4
       - yaspin==3.0.2
-      - ydata-profiling==4.5.0
       - ypy-websocket==0.12.4
-      - zarr==2.17.2
+      - zarr==2.18.0
       - zeep==4.2.1
       - zict==3.0.0
       - zipp==3.18.1
