--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -36,18 +36,23 @@ dependencies:
       - bidict==0.23.1
       - bleach==6.1.0
       - blinker==1.8.2
-      - botocore==1.34.105
+      - blis==0.7.11
+      - botocore==1.34.107
       - braincube-connector==2.6.0
       - cachetools==5.3.3
+      - catalogue==2.0.10
       - certifi==2024.2.2
       - cffi==1.16.0
       - charset-normalizer==3.3.2
       - click==8.1.7
+      - cloudpathlib==0.16.0
       - clr-loader==0.2.6
       - colorama==0.4.6
       - comm==0.2.2
+      - confection==0.1.4
       - contourpy==1.2.1
       - cycler==0.12.1
+      - cymem==2.0.8
       - dataclasses-json==0.6.6
       - debugpy==1.8.1
       - decorator==5.1.1
@@ -74,7 +79,7 @@ dependencies:
       - fpdf2==2.7.8
       - fqdn==1.5.1
       - frozenlist==1.4.1
-      - fsspec==2024.3.1
+      - fsspec==2024.5.0
       - gitdb==4.0.11
       - gitpython==3.1.43
       - google-api-core==2.19.0
@@ -118,6 +123,7 @@ dependencies:
       - json-numpy==2.0.0
       - json5==0.9.25
       - jsonpatch==1.33
+      - jsonpath-ng==1.6.1
       - jsonpointer==2.4
       - jsonschema==4.22.0
       - jsonschema-specifications==2023.12.1
@@ -144,9 +150,11 @@ dependencies:
       - langchain-core==0.1.52
       - langchain-openai==0.1.6
       - langchain-text-splitters==0.0.1
-      - langsmith==0.1.57
+      - langcodes==3.4.0
+      - langsmith==0.1.59
+      - language-data==1.2.0
       - lazy-loader==0.4
-      - llama-cpp-python==0.2.74
+      - llama-cpp-python==0.2.75
       - llama-index==0.10.37
       - llama-index-agent-openai==0.2.5
       - llama-index-cli==0.1.12
@@ -164,12 +172,13 @@ dependencies:
       - llama-parse==0.4.3
       - llamaindex-py-client==0.1.19
       - lxml==5.2.2
+      - marisa-trie==1.1.1
       - markdown==3.6
       - markdown-it-py==3.0.0
       - markdown2==2.4.13
       - markupsafe==2.1.5
       - marshmallow==3.21.2
-      - matplotlib==3.8.4
+      - matplotlib==3.9.0
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
@@ -177,6 +186,7 @@ dependencies:
       - mkl==2021.4.0
       - mpmath==1.3.0
       - multidict==6.0.5
+      - murmurhash==1.0.10
       - mypy-extensions==1.0.0
       - nbclient==0.10.0
       - nbconvert==7.16.4
@@ -203,8 +213,10 @@ dependencies:
       - persist-queue==0.8.1
       - pillow==10.3.0
       - pip==24.0
-      - platformdirs==4.2.1
+      - platformdirs==4.2.2
       - pluggy==1.5.0
+      - ply==3.11
+      - preshed==3.0.9
       - prometheus-client==0.20.0
       - prompt-toolkit==3.0.43
       - proto-plus==1.23.0
@@ -242,7 +254,7 @@ dependencies:
       - qrcode==7.4.2
       - qudida==0.0.4
       - referencing==0.35.1
-      - regex==2024.5.10
+      - regex==2024.5.15
       - replicate==0.26.0
       - requests==2.31.0
       - requests-oauthlib==2.0.0
@@ -258,18 +270,23 @@ dependencies:
       - scipy==1.13.0
       - segment-anything==1.0
       - send2trash==1.8.3
-      - sentry-sdk==2.1.1
+      - sentry-sdk==2.2.0
       - setproctitle==1.3.3
       - setuptools==69.5.1
       - shapely==2.0.4
       - shellingham==1.5.4
       - simple-websocket==1.0.0
       - six==1.16.0
+      - smart-open==6.4.0
       - smmap==5.0.1
       - snakeviz==2.2.0
       - sniffio==1.3.1
       - soupsieve==2.5
+      - spacy==3.7.4
+      - spacy-legacy==3.0.12
+      - spacy-loggers==1.0.5
       - sqlalchemy==2.0.30
+      - srsly==2.4.8
       - stack-data==0.6.3
       - starlette==0.36.3
       - streamlit==1.34.0
@@ -279,6 +296,7 @@ dependencies:
       - tbb==2021.12.0
       - tenacity==8.3.0
       - terminado==0.18.1
+      - thinc==8.2.3
       - threadpoolctl==3.5.0
       - tifffile==2024.5.10
       - tiktoken==0.7.0
@@ -306,9 +324,11 @@ dependencies:
       - validators==0.28.1
       - vbuild==0.8.2
       - wandb==0.17.0
+      - wasabi==1.1.2
       - watchdog==4.0.0
       - watchfiles==0.21.0
       - wcwidth==0.2.13
+      - weasel==0.3.4
       - webcolors==1.13
       - webencodings==0.5.1
       - websocket-client==1.8.0
@@ -319,5 +339,5 @@ dependencies:
       - xlsxwriter==3.2.0
       - yarl==1.9.4
       - yoctopuce==2.0.60664
-      - zipp==3.18.1
+      - zipp==3.18.2
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
