--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -84,10 +84,13 @@ dependencies:
       - gitdb==4.0.11
       - gitpython==3.1.43
       - google-api-core==2.19.0
+      - google-api-python-client==2.135.0
       - google-auth==2.30.0
+      - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.0
       - google-cloud-aiplatform==1.51.0
       - google-cloud-bigquery==3.22.0
+      - google-cloud-compute==1.19.0
       - google-cloud-core==2.4.1
       - google-cloud-pipeline-components==2.14.0
       - google-cloud-resource-manager==1.12.3
@@ -103,6 +106,7 @@ dependencies:
       - h11==0.14.0
       - h5py==3.11.0
       - httpcore==1.0.5
+      - httplib2==0.22.0
       - httptools==0.6.1
       - httpx==0.27.0
       - huggingface-hub==0.23.4
@@ -203,7 +207,7 @@ dependencies:
       - ollama==0.2.1
       - openai==1.34.0
       - opencv-contrib-python==4.10.0.82
-      - opencv-python==4.10.0.82
+      - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.82
       - orjson==3.10.5
       - overrides==7.7.0
@@ -213,7 +217,7 @@ dependencies:
       - parso==0.8.4
       - persist-queue==0.8.1
       - pillow==10.3.0
-      - pip==24.0
+      - pip==24.1
       - platformdirs==4.2.2
       - pluggy==1.5.0
       - ply==3.11
@@ -321,6 +325,7 @@ dependencies:
       - tzlocal==5.2
       - ujson==5.10.0
       - uri-template==1.3.0
+      - uritemplate==4.1.1
       - urllib3==1.26.18
       - uvicorn==0.30.1
       - validators==0.28.3
