--- a/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
+++ b/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
@@ -20,152 +20,166 @@ dependencies:
   - xz=5.4.5=h998d150_0
   - zlib=1.2.13=h998d150_0
   - pip:
-      - ansi2html==1.9.1
+      - ansi2html==1.9.2
       - arena-api==2.3.3
       - asttokens==2.4.1
-      - attrs==23.2.0
-      - av==11.0.0
+      - attrs==24.2.0
+      - av==12.3.0
       - backcall==0.2.0
-      - blinker==1.7.0
+      - beautifulsoup4==4.12.3
+      - bleach==6.1.0
+      - blinker==1.8.2
       - braincube-connector==2.6.0
-      - cachetools==5.3.2
-      - certifi==2023.11.17
+      - cachetools==5.5.0
+      - certifi==2024.7.4
       - charset-normalizer==3.3.2
       - click==8.1.7
       - colorama==0.4.6
-      - comm==0.2.1
+      - comm==0.2.2
       - compress-pickle==2.1.0
       - configargparse==1.7
-      - contourpy==1.2.0
+      - contourpy==1.2.1
       - cycler==0.12.1
       - cylinder-fitting==1.1.4
-      - dash==2.14.2
+      - dash==2.17.1
       - dash-core-components==2.0.0
       - dash-html-components==2.0.0
       - dash-table==5.0.0
-      - debugpy==1.8.0
+      - debugpy==1.8.5
       - decorator==5.1.1
+      - defusedxml==0.7.1
       - deprecated==1.2.14
-      - dill==0.3.7
+      - dill==0.3.8
       - dnspython==2.6.1
       - docopt==0.6.2
-      - email-validator==2.1.1
+      - email-validator==2.2.0
       - entrypoints==0.4
-      - exceptiongroup==1.2.0
+      - exceptiongroup==1.2.2
       - executing==2.0.1
-      - fastjsonschema==2.19.1
-      - flake8==7.0.0
-      - flask==3.0.1
-      - fonttools==4.47.2
-      - google-api-core==2.16.2
-      - google-auth==2.27.0
-      - google-cloud-bigquery==3.17.2
+      - fastjsonschema==2.20.0
+      - flake8==7.1.1
+      - flask==3.0.3
+      - fonttools==4.53.1
+      - google-api-core==2.19.1
+      - google-auth==2.34.0
+      - google-cloud-bigquery==3.25.0
       - google-cloud-core==2.4.1
-      - google-cloud-storage==2.14.0
+      - google-cloud-storage==2.18.2
       - google-crc32c==1.5.0
-      - google-resumable-media==2.7.0
-      - googleapis-common-protos==1.62.0
-      - idna==3.6
-      - imageio==2.33.1
-      - importlib-metadata==6.11.0
-      - importlib-resources==6.1.1
+      - google-resumable-media==2.7.2
+      - googleapis-common-protos==1.63.2
+      - grpcio==1.65.5
+      - grpcio-status==1.65.5
+      - idna==3.7
+      - imageio==2.35.1
+      - importlib-metadata==7.0.2
+      - importlib-resources==6.4.4
       - imutils==0.5.4
       - iniconfig==2.0.0
-      - ipykernel==6.29.0
-      - ipython==8.20.0
-      - ipywidgets==8.1.1
-      - itsdangerous==2.1.2
+      - ipykernel==6.29.5
+      - ipython==8.12.3
+      - ipywidgets==8.1.3
+      - itsdangerous==2.2.0
       - jedi==0.19.1
-      - jinja2==3.1.3
-      - joblib==1.3.2
-      - jsonschema==4.21.1
+      - jinja2==3.1.4
+      - joblib==1.4.2
+      - jsonschema==4.23.0
       - jsonschema-specifications==2023.12.1
-      - jupyter-client==8.6.0
-      - jupyter-core==5.7.1
-      - jupyterlab-widgets==3.0.9
+      - jupyter-client==8.6.2
+      - jupyter-core==5.7.2
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-widgets==3.0.11
       - kiwisolver==1.4.5
-      - laspy==2.5.3
-      - lazy-loader==0.3
-      - llvmlite==0.41.1
-      - lmdb==1.4.1
-      - markupsafe==2.1.4
-      - matplotlib==3.8.2
-      - matplotlib-inline==0.1.6
+      - laspy==2.5.4
+      - lazy-loader==0.4
+      - llvmlite==0.43.0
+      - lmdb==1.5.1
+      - markupsafe==2.1.5
+      - matplotlib==3.9.2
+      - matplotlib-inline==0.1.7
       - mccabe==0.7.0
-      - nbformat==5.9.2
+      - mistune==3.0.2
+      - nbclient==0.10.0
+      - nbconvert==7.16.4
+      - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.2.1
-      - numba==0.58.1
+      - networkx==3.3
+      - numba==0.60.0
       - numpy==1.26.3
-      - opencv-contrib-python==4.9.0.80
-      - opencv-python==4.9.0.80
-      - opencv-python-headless==4.9.0.80
-      - opentelemetry-api==1.22.0
-      - opentelemetry-instrumentation==0.43b0
-      - packaging==23.2
-      - pandas==2.2.0
-      - parso==0.8.3
+      - opencv-contrib-python==4.10.0.84
+      - opencv-python==4.10.0.84
+      - opencv-python-headless==4.10.0.84
+      - opentelemetry-api==1.26.0
+      - opentelemetry-instrumentation==0.47b0
+      - packaging==24.1
+      - pandas==2.2.2
+      - pandocfilters==1.5.1
+      - parso==0.8.4
       - pexpect==4.9.0
       - pickleshare==0.7.5
-      - pillow==10.2.0
-      - pip==24.1.2
-      - pipreqs==0.4.13
-      - platformdirs==4.1.0
-      - plotly==5.18.0
-      - pluggy==1.3.0
-      - plyfile==1.0.3
-      - polars==0.20.5
-      - prompt-toolkit==3.0.43
-      - protobuf==4.25.2
-      - psutil==5.9.8
+      - pillow==10.4.0
+      - pip==24.2
+      - pipreqs==0.5.0
+      - platformdirs==4.2.2
+      - plotly==5.23.0
+      - pluggy==1.5.0
+      - plyfile==1.1
+      - polars==1.5.0
+      - prompt-toolkit==3.0.47
+      - proto-plus==1.24.0
+      - protobuf==5.27.3
+      - psutil==6.0.0
       - ptyprocess==0.7.0
-      - pure-eval==0.2.2
+      - pure-eval==0.2.3
       - py-cylinder-fitting==1.0.0
-      - pyarrow==15.0.0
-      - pyasn1==0.5.1
-      - pyasn1-modules==0.3.0
-      - pycodestyle==2.11.1
+      - pyarrow==17.0.0
+      - pyasn1==0.6.0
+      - pyasn1-modules==0.4.0
+      - pycodestyle==2.12.1
       - pyflakes==3.2.0
-      - pygments==2.17.2
+      - pygments==2.18.0
       - pyoints==0.2.0a3
-      - pyparsing==3.1.1
+      - pyparsing==3.1.2
       - pyrsistent==0.20.0
-      - pytest==7.4.4
-      - python-dateutil==2.8.2
-      - pytz==2023.3.post1
-      - pyzmq==25.1.2
-      - referencing==0.32.1
-      - requests==2.31.0
+      - pytest==8.3.2
+      - python-dateutil==2.9.0
+      - pytz==2024.1
+      - pyzmq==26.2.0
+      - referencing==0.35.1
+      - requests==2.32.3
       - retrying==1.3.4
-      - rpds-py==0.17.1
+      - rpds-py==0.20.0
       - rsa==4.9
-      - ruff==0.1.14
-      - scikit-learn==1.4.0
-      - scikit-spatial==7.0.0
-      - scipy==1.12.0
-      - setuptools==69.0.3
-      - shapely==2.0.2
+      - ruff==0.6.1
+      - scikit-learn==1.5.1
+      - scikit-spatial==7.2.0
+      - scipy==1.14.1
+      - setuptools==73.0.1
+      - shapely==2.0.6
       - six==1.16.0
+      - soupsieve==2.6
       - stack-data==0.6.3
-      - tenacity==8.2.3
-      - threadpoolctl==3.2.0
-      - tifffile==2023.12.9
-      - tinyflux==0.4.1
+      - tenacity==9.0.0
+      - threadpoolctl==3.5.0
+      - tifffile==2024.8.10
+      - tinycss2==1.3.0
+      - tinyflux==1.0.0
       - tk==0.1.0
       - tomli==2.0.1
-      - tornado==6.4
-      - traitlets==5.14.1
-      - typing-extensions==4.9.0
-      - tzdata==2023.4
-      - urllib3==2.1.0
+      - tornado==6.4.1
+      - traitlets==5.14.3
+      - typing-extensions==4.12.2
+      - tzdata==2024.1
+      - urllib3==2.2.2
       - wcwidth==0.2.13
-      - werkzeug==3.0.1
-      - wheel==0.42.0
-      - widgetsnbextension==4.0.9
-      - wincertstore==0.2
+      - webencodings==0.5.1
+      - werkzeug==3.0.4
+      - wheel==0.44.0
+      - widgetsnbextension==4.0.11
+      - wincertstore==0.2.1
       - wrapt==1.16.0
-      - xlsxwriter==3.1.9
+      - xlsxwriter==3.2.0
       - yarg==0.1.9
       - yoctopuce==2.0.61813
-      - zipp==3.17.0
+      - zipp==3.20.0
 prefix: /home/nvidia/miniconda3/envs/py_env_bvm
