--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -59,6 +59,7 @@ dependencies:
       - cymem==2.0.8
       - cython==0.29.37
       - dataclasses-json==0.6.7
+      - db-dtypes==1.3.0
       - debugpy==1.8.1
       - decorator==5.1.1
       - defusedxml==0.7.1
@@ -237,6 +238,7 @@ dependencies:
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.2.2
+      - pandas-gbq==0.23.1
       - pandocfilters==1.5.1
       - parso==0.8.4
       - persist-queue==0.8.1
@@ -260,6 +262,7 @@ dependencies:
       - pycparser==2.22
       - pydantic==2.7.4
       - pydantic-core==2.18.4
+      - pydata-google-auth==1.8.2
       - pydeck==0.9.1
       - pyflakes==3.2.0
       - pygments==2.18.0
