--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -15,6 +15,7 @@ dependencies:
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
   - pip:
+      - absl-py==2.1.0
       - aiofiles==23.2.1
       - aiohttp==3.9.5
       - aioitertools==0.11.0
@@ -25,6 +26,7 @@ dependencies:
       - alembic==1.13.2
       - altair==5.3.0
       - annotated-types==0.7.0
+      - antlr4-python3-runtime==4.9.3
       - anyio==4.4.0
       - appdirs==1.4.4
       - arena-api==2.5.9
@@ -59,12 +61,14 @@ dependencies:
       - cymem==2.0.8
       - cython==0.29.37
       - dataclasses-json==0.6.7
+      - datasets==2.17.1
       - db-dtypes==1.3.0
       - debugpy==1.8.1
       - decorator==5.1.1
       - defusedxml==0.7.1
       - deprecated==1.2.14
       - deprecation==2.1.0
+      - dill==0.3.8
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
@@ -72,6 +76,7 @@ dependencies:
       - docker-pycreds==0.4.0
       - docstring-parser==0.16
       - docutils==0.19
+      - einops==0.7.0
       - email-validator==2.1.1
       - exceptiongroup==1.2.1
       - executing==2.0.1
@@ -85,9 +90,10 @@ dependencies:
       - fpdf2==2.7.9
       - fqdn==1.5.1
       - frozenlist==1.4.1
-      - fsspec==2024.6.0
+      - fsspec==2023.10.0
       - gitdb==4.0.11
       - gitpython==3.1.43
+      - gluonts==0.14.4
       - google-api-core==2.19.0
       - google-api-python-client==2.135.0
       - google-auth==2.30.0
@@ -117,6 +123,7 @@ dependencies:
       - httptools==0.6.1
       - httpx==0.27.0
       - huggingface-hub==0.23.4
+      - hydra-core==1.3.0
       - idna==3.7
       - ifaddr==0.2.0
       - imageio==2.34.1
@@ -129,6 +136,9 @@ dependencies:
       - ipython-genutils==0.2.0
       - isoduration==20.11.0
       - itsdangerous==2.2.0
+      - jax==0.4.31
+      - jaxlib==0.4.31
+      - jaxtyping==0.2.34
       - jedi==0.19.1
       - jinja2==3.1.4
       - jmespath==1.0.1
@@ -167,6 +177,8 @@ dependencies:
       - langsmith==0.1.77
       - language-data==1.2.0
       - lazy-loader==0.4
+      - lightning==2.4.0
+      - lightning-utilities==0.11.6
       - llama-cpp-python==0.2.78
       - llama-index==0.10.37
       - llama-index-agent-openai==0.2.5
@@ -199,8 +211,10 @@ dependencies:
       - mdurl==0.1.2
       - mistune==3.0.2
       - mkl==2021.4.0
+      - ml-dtypes==0.4.0
       - mpmath==1.3.0
       - multidict==6.0.5
+      - multiprocess==0.70.16
       - murmurhash==1.0.10
       - mypy-extensions==1.0.0
       - nbclient==0.10.0
@@ -216,6 +230,7 @@ dependencies:
       - numpy==1.26.4
       - oauthlib==3.2.2
       - ollama==0.2.1
+      - omegaconf==2.3.0
       - openai==1.34.0
       - opencv-contrib-python==4.10.0.82
       - opencv-python==4.10.0.84
@@ -234,10 +249,11 @@ dependencies:
       - opentelemetry-proto==1.25.0
       - opentelemetry-sdk==1.25.0
       - opentelemetry-semantic-conventions==0.46b0
+      - opt-einsum==3.3.0
       - orjson==3.10.5
       - overrides==7.7.0
       - packaging==23.2
-      - pandas==2.2.2
+      - pandas==2.1.4
       - pandas-gbq==0.23.1
       - pandocfilters==1.5.1
       - parso==0.8.4
@@ -256,6 +272,7 @@ dependencies:
       - psutil==5.9.8
       - pure-eval==0.2.2
       - pyarrow==16.1.0
+      - pyarrow-hotfix==0.6
       - pyasn1==0.6.0
       - pyasn1-modules==0.4.0
       - pycodestyle==2.11.1
@@ -272,12 +289,13 @@ dependencies:
       - pyqtree==1.0.0
       - pytest==8.2.2
       - python-dateutil==2.9.0.post0
-      - python-dotenv==1.0.1
+      - python-dotenv==1.0.0
       - python-engineio==4.9.1
       - python-json-logger==2.0.7
       - python-multipart==0.0.9
       - python-socketio==5.11.2
       - pythonnet==3.0.3
+      - pytorch-lightning==2.4.0
       - pytz==2024.1
       - pywin32==306
       - pywinpty==2.0.13
@@ -298,9 +316,10 @@ dependencies:
       - rpds-py==0.18.1
       - rsa==4.9
       - ruff==0.4.9
+      - safetensors==0.4.4
       - scikit-image==0.23.2
       - scikit-learn==1.5.0
-      - scipy==1.13.1
+      - scipy==1.11.4
       - segment-anything==1.0
       - send2trash==1.8.3
       - sentry-sdk==2.5.1
@@ -330,6 +349,8 @@ dependencies:
       - tabulate==0.9.0
       - tbb==2021.12.0
       - tenacity==8.3.0
+      - tensorboard==2.17.1
+      - tensorboard-data-server==0.7.2
       - terminado==0.18.1
       - thinc==8.2.3
       - threadpoolctl==3.5.0
@@ -342,11 +363,13 @@ dependencies:
       - toolz==0.12.1
       - torch==2.3.0+cu121
       - torchaudio==2.3.0+cu121
+      - torchmetrics==1.4.1
       - torchvision==0.18.0+cu121
       - tornado==6.4.1
       - tqdm==4.66.4
       - traitlets==5.14.3
       - travertino==0.3.0
+      - typeguard==2.13.3
       - typer==0.12.3
       - types-python-dateutil==2.9.0.20240316
       - typing-extensions==4.12.2
@@ -354,6 +377,7 @@ dependencies:
       - tzdata==2024.1
       - tzlocal==5.2
       - ujson==5.10.0
+      - uni2ts==1.1.0
       - uri-template==1.3.0
       - uritemplate==4.1.1
       - urllib3==1.26.18
@@ -374,6 +398,7 @@ dependencies:
       - wrapt==1.16.0
       - wsproto==1.2.0
       - xlsxwriter==3.2.0
+      - xxhash==3.5.0
       - yarl==1.9.4
       - yoctopuce==2.0.61305
       - zipp==3.19.2
