--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -105,6 +105,7 @@ dependencies:
       - google-cloud-core==2.4.1
       - google-cloud-pipeline-components==2.14.0
       - google-cloud-resource-manager==1.12.3
+      - google-cloud-secret-manager==2.20.2
       - google-cloud-storage==2.16.0
       - google-cloud-vision==3.7.2
       - google-crc32c==1.5.0
@@ -197,6 +198,7 @@ dependencies:
       - llama-parse==0.4.3
       - llamaindex-py-client==0.1.19
       - llvmlite==0.43.0
+      - lmdb==1.5.1
       - lxml==5.2.2
       - mako==1.3.5
       - marisa-trie==1.2.0
